Actualización de ficheros 15/12/2020

--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     </head>
     <body>
         <p>Bienvenido, pulse Control + F10 o espere 5 segundos</p>
-        <br>
-        <p>Usuario:</p>
-        <p><input type="text" id="usuario" name="usuario" /></p>
-        <br>
-        <a href="usuario.html">Siguiente</a>
     </body>
+    <script type="text/javascript" src="./scripts/index.js"></script>
 </html>
