--- a/preguntas.html
+++ b/preguntas.html
@@ -10,7 +10,7 @@
         <div id="maquetar">
             <div id="form">
                 <form id="formpreguntas" name="formpreguntas">
-                    Pregunta: <input type="text" id="pregunta" name="pregunta" required />
+                    Pregunta: <textarea id="pregunta" name="pregunta" required></textarea>
                     <br>
                     <input type="radio" id="verdadero" name="respuesta" value="verdadero" />
                     <label for="verdadero">Verdadero</label>
@@ -22,7 +22,7 @@
                     <input type="submit" id="grabar" name="grabar" value="Grabar" />
                 </form>
                 <br>
-                <a href="usuario.html">Atrás</a>
+                <a href="usuario.html"><button>Atrás</button></a>
             </div>
             <div id="list">
                 <section>
@@ -37,6 +37,7 @@
                     <hr>
                     <hr>
                 </section>
+                <!--
                 <section>
                     <p>Pregunta 1</p>
                     <p>Verdadero</p>
@@ -55,6 +56,7 @@
                     <p>8</p>
                     <p>Guardando...</p>
                 </section>
+                -->
             </div>
         </div>
     </body>
