--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         <link rel="stylesheet" type="text/css" href="styles/index.css" />
     </head>
     <body>
-        <p>Bienvenido, pulse Control + F10 o espere 5 segundos</p>
+        <section id="principal">
+            <p>Bienvenido, pulse Control + F10 o espere 5 segundos</p>
+        </section>
+        <section id="error">
+        </section>
     </body>
+    <script type="text/javascript" src="./node_modules/js-cookie/src/js.cookie.js"></script>
     <script type="text/javascript" src="./scripts/index.js"></script>
 </html>
