Actualización de ficheros 18/12/2020 - 01:53

--- a/usuario.html
+++ b/usuario.html
@@ -7,8 +7,10 @@
         <link rel="stylesheet" type="text/css" href="styles/usuario.css" />
     </head>
     <body>
-        <p>Hola "correo".</p>
-        <p>La última vez que entraste fue el "DD-MM-YYYY" a las "HH:MM:SS"</p>
+        <p id="p1"></p>
+        <p id="p2"></p>
         <a href="preguntas.html">Preguntas</a>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+    <script type="text/javascript" src="scripts/usuario.js"></script>
 </html>
