--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <section id="error">
         </section>
     </body>
-    <script type="text/javascript" src="./node_modules/js-cookie/src/js.cookie.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script type="text/javascript" src="./scripts/index.js"></script>
 </html>
