--- a/preguntas.html
+++ b/preguntas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bienvenido</title>
+        <title>Preguntas</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="styles/general.css" />
         <link rel="stylesheet" type="text/css" href="styles/preguntas.css" />
@@ -60,4 +60,6 @@
             </div>
         </div>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+    <script type="text/javascript" src="scripts/preguntas.js"></script>
 </html>
