Actualización de ficheros 22/12/2020 - 03:26

--- a/preguntas.html
+++ b/preguntas.html
@@ -22,7 +22,7 @@
                     <input type="submit" id="grabar" name="grabar" value="Grabar" />
                 </form>
                 <br>
-                <a href="usuario.html"><button>Atrás</button></a>
+                <a href="usuario.html"><button id="atras" name="atras">Atrás</button></a>
             </div>
             <div id="list">
                 <section>
