--- a/preguntas.html
+++ b/preguntas.html
@@ -19,7 +19,7 @@
                     <br>
                     Puntuación: <input type="number" id="puntuacion" name="puntuacion" min="1" max="9" required />
                     <br>
-                    <input type="submit" id="grabar" name="grabar" value="Grabar" />
+                    <input type="submit" id="grabar" name="grabar" value="Grabar" disabled />
                 </form>
                 <br>
                 <a href="usuario.html"><button id="atras" name="atras">Atrás</button></a>
