--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
         </section>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-    <script type="text/javascript" src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
 </html>
