--- a/preguntas.html
+++ b/preguntas.html
@@ -19,7 +19,7 @@
                     <br>
                     Puntuación: <input type="number" id="puntuacion" name="puntuacion" min="1" max="9" required />
                     <br>
-                    <input type="submit" id="grabar" name="grabar" value="Grabar" disabled />
+                    <input type="submit" id="grabar" name="grabar" value="Grabar" />
                 </form>
                 <br>
                 <a href="usuario.html"><button id="atras" name="atras">Atrás</button></a>
@@ -61,5 +61,5 @@
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-    <script type="text/javascript" src="scripts/preguntas.js"></script>
+    <script type="module" src="scripts/preguntas.js"></script>
 </html>
